--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NeumannKelvin"
 uuid = "7f078b06-e5c4-4cf8-bb56-b92882a0ad03"
 authors = ["Gabriel Weymouth"]
-version = "0.1"
+version = "0.1.1"
 
 [deps]
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
@@ -13,16 +13,17 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
-julia = "1.9"
-FastGaussQuadrature  = "1"
+FastGaussQuadrature = "1"
 ForwardDiff = "0.10"
 Reexport = "1"
 SpecialFunctions = "2"
 StaticArrays = "1"
 TypedTables = "1"
+julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 
 [targets]
-test = ["Test"]
+test = ["Test","QuadGK"]
