--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ SpecialFunctions = "2"
 StaticArrays = "1"
 TypedTables = "1"
 julia = "1.9"
+QuadGK = "2.9"
 
 [extras]
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
