--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,11 @@ authors = ["Gabriel Weymouth"]
 version = "0.1.5"
 
 [deps]
+FastChebInterp = "cf66c380-9a80-432c-aff8-4f9c79c0bdde"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -20,6 +22,7 @@ SpecialFunctions = "2"
 StaticArrays = "1"
 TypedTables = "1"
 julia = "1.9"
+FastChebInterp = "1"
 QuadGK = "2.9"
 
 [extras]
