--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NeumannKelvin"
 uuid = "7f078b06-e5c4-4cf8-bb56-b92882a0ad03"
 authors = ["Gabriel Weymouth"]
-version = "0.2"
+version = "0.2.0"
 
 [deps]
 FastChebInterp = "cf66c380-9a80-432c-aff8-4f9c79c0bdde"
@@ -12,18 +12,19 @@ QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
+FastChebInterp = "1"
 FastGaussQuadrature = "1"
 ForwardDiff = "0.10"
+QuadGK = "2.9"
 Reexport = "1"
 SpecialFunctions = "2"
 StaticArrays = "1"
 TypedTables = "1"
 julia = "1.9"
-FastChebInterp = "1"
-QuadGK = "2.9"
 
 [extras]
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
