--- a/Project.toml
+++ b/Project.toml
@@ -30,8 +30,7 @@ TypedTables = "1"
 julia = "1.9"
 
 [extras]
-QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "QuadGK"]
+test = ["Test"]
