--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,9 +23,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.9'
-          - '1.10'
-          - 'nightly'
+          - 'lts'
+          - 'stable'
         os:
           - ubuntu-latest
         arch:
