--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,10 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
+WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
+
+[extensions]
+NeumannKelvinWGLMakieExt = "WGLMakie"
 
 [compat]
 DataInterpolations = "8.0.1"
@@ -29,6 +33,7 @@ SpecialFunctions = "2"
 StaticArrays = "1"
 ThreadsX = "0.1.12"
 TypedTables = "1"
+WGLMakie = "0.11.7"
 julia = "1.9"
 
 [extras]
