--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
+TupleTools = "9d95972d-f1c8-5527-a6e0-b4b365fa01f6"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [weakdeps]
@@ -41,6 +42,7 @@ Roots = "2.2.3"
 SpecialFunctions = "2"
 StaticArrays = "1"
 ThreadsX = "0.1.12"
+TupleTools = "1.6.0"
 TypedTables = "1"
 julia = "1.9"
 
