--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
+LegendrePolynomials = "3db4a2ba-fc88-11e8-3e01-49c72059a882"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -37,6 +38,7 @@ FastGaussQuadrature = "1"
 ForwardDiff = "0.10"
 HCubature = "1.7.0"
 IntervalSets = "0.7.11"
+LegendrePolynomials = "0.4.5"
 NURBS = "0.8.0"
 QuadGK = "2.9"
 Reexport = "1"
