--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ FastChebInterp = "cf66c380-9a80-432c-aff8-4f9c79c0bdde"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
+ImplicitBVH = "932a18dc-bb55-4cd5-bdd6-1368ec9cea29"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -34,6 +35,7 @@ FastChebInterp = "1"
 FastGaussQuadrature = "1"
 ForwardDiff = "0.10"
 HCubature = "1.7.0"
+ImplicitBVH = "0.7.0"
 NURBS = "0.8.0"
 QuadGK = "2.9"
 Reexport = "1"
