--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Gabriel Weymouth"]
 version = "0.7.0"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
 FastChebInterp = "cf66c380-9a80-432c-aff8-4f9c79c0bdde"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
@@ -30,6 +31,7 @@ NeumannKelvinNURBSExt = "NURBS"
 NeumannKelvinPlotsExt = "Plots"
 
 [compat]
+BenchmarkTools = "1.6.3"
 DataInterpolations = "8.0.1"
 FastChebInterp = "1"
 FastGaussQuadrature = "1"
