--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,9 @@ FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
 ImplicitBVH = "932a18dc-bb55-4cd5-bdd6-1368ec9cea29"
+Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LinearOperators = "5c8ed15e-5a4c-59e4-a42b-c7e8811fb125"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
@@ -38,6 +40,8 @@ FastGaussQuadrature = "1"
 ForwardDiff = "0.10"
 HCubature = "1.7.0"
 ImplicitBVH = "0.7.0"
+Krylov = "0.10.3"
+LinearOperators = "2.11.0"
 NURBS = "0.8.0"
 QuadGK = "2.9"
 Reexport = "1"
