AcceleratedKernels and BH panel_method functions
I'm trying out AcceleratedKernels since that's what is used in ImplicitBVH and it's seems pretty good. I can't preallocate the search stack, but I'm still getting >2x speed-up on my old 4 virtual thread laptop.
I've also generalized the BarnesHut with ϕ,kwargs inputs, and written specialzed functions for Φ and steady_force.

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Gabriel Weymouth"]
 version = "0.7.0"
 
 [deps]
+AcceleratedKernels = "6a4ca0a5-0e36-4168-a932-d9be78d558f1"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
 FastChebInterp = "cf66c380-9a80-432c-aff8-4f9c79c0bdde"
@@ -33,6 +34,7 @@ NeumannKelvinNURBSExt = "NURBS"
 NeumannKelvinPlotsExt = "Plots"
 
 [compat]
+AcceleratedKernels = "0.4.3"
 BenchmarkTools = "1.6.3"
 DataInterpolations = "8.0.1"
 FastChebInterp = "1"
