Fixed TriKernel panels and added body_vol
Added a nice batch of test for stl panels - so this is certainly working properly now. Also updated a few places to adapt to variable Floating point type.

Fixed addedmass to be dimensionless by including an approximate body_vol() calculator using the divergence theorem. It's within a few percent for the D20.

--- a/Project.toml
+++ b/Project.toml
@@ -47,7 +47,10 @@ julia = "1.9"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
+MeshIO = "7269a6da-0436-5bbc-96c2-40638cbb6118"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "BenchmarkTools"]
+test = ["Test", "BenchmarkTools", "GeometryBasics", "FileIO", "MeshIO"]
